# lumina-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  lumina.md  pyproject.toml
app/: cleanup.py  config.py  db.py  deps.py  extract.py  gemini.py  google_oauth.py  jwt_utils.py  main.py  models.py  schemas.py
app/routers/: articles.py  auth.py  gloss.py  rewrite.py  wordbook.py
scripts/: smoke.sh  smoke_email_auth.sh
