[project]
name = "lumina-backend"
version = "0.1.0"
description = "Lumina backend — adaptive reading API"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "pyjwt[crypto]>=2.9",
    "bcrypt>=4.2",
    "httpx>=0.27",
    "google-genai>=0.3",
    "trafilatura>=1.12",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ARG", "SIM"]
